--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ code/.vscode/
 code/.idea/
 code/output/
 # except for .gitkeep
-!.gitkeep
+!code/output/.gitkeep
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
