--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 .vscode/
 .idea/
-code/.vscode/
-code/.idea/
-code/output/*
+/code/output/*
 # except for .gitkeep
-!code/output/.gitkeep
+!/code/output/.gitkeep
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
